// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with color 1`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  border-color: #2da0c7;
  background-color: #2da0c7;
  color: #ffffff;
}

.c0:hover {
  border-color: #3bacd3;
  background-color: #3bacd3;
}

.c0:active {
  border-color: #3bacd3;
  background-color: #3bacd3;
  box-shadow: 0 0 5px 0 #3bacd3;
}

<styled.button
  color="primary"
  variant="contained"
>
  <button
    className="c0"
    color="primary"
  >
    Primary button
  </button>
</styled.button>
`;

exports[`renders correctly with color 2`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  border-color: #999999;
  background-color: #999999;
  color: #ffffff;
}

.c0:hover {
  border-color: #a6a6a6;
  background-color: #a6a6a6;
}

.c0:active {
  border-color: #a6a6a6;
  background-color: #a6a6a6;
  box-shadow: 0 0 5px 0 #a6a6a6;
}

<styled.button
  color="secondary"
  variant="contained"
>
  <button
    className="c0"
    color="secondary"
  >
    Secondary button
  </button>
</styled.button>
`;

exports[`renders correctly with variant 1`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  border-color: #2da0c7;
  background-color: #2da0c7;
  color: #ffffff;
}

.c0:hover {
  border-color: #3bacd3;
  background-color: #3bacd3;
}

.c0:active {
  border-color: #3bacd3;
  background-color: #3bacd3;
  box-shadow: 0 0 5px 0 #3bacd3;
}

<styled.button
  color="primary"
  variant="contained"
>
  <button
    className="c0"
    color="primary"
  >
    Contained button
  </button>
</styled.button>
`;

exports[`renders correctly with variant 2`] = `
.c0 {
  outline: none;
  padding: 6px 16px;
  border-radius: 4px;
  font-family: 'Roboto',sans-serif;
  font-size: 1rem;
  border: 2px solid;
  line-height: 1.5;
  white-space: nowrap;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  transition: box-shadow 0.25s,background-color 0.25s,border-color 0.25s;
  background-color: transparent;
  border-color: #2da0c7;
  color: #2da0c7;
}

.c0:hover {
  border-color: #3bacd3;
  color: #3bacd3;
}

.c0:active {
  border-color: #3bacd3;
  color: #3bacd3;
  box-shadow: 0 0 5px 0 #3bacd3;
}

<styled.button
  color="primary"
  variant="outlined"
>
  <button
    className="c0"
    color="primary"
  >
    Outlined button
  </button>
</styled.button>
`;
